<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >

    <data>
        <variable
            name="viewModel"
            type="com.example.fintech.ui.fragment.auth.viewModel.SignUpViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/rootLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:id="@+id/signupLayout"
                android:layout_height="wrap_content">

                <ImageButton
                    android:src="@drawable/close_popup"
                    android:padding="16dp"
                    android:layout_marginTop="25dp"
                    android:background="@color/white"
                    android:id="@+id/loginCloseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/wellnessTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textAlignment="textStart"
                        android:textColor="@color/wellness_blue"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/enter_your_details_to_get_started"
                        android:id="@+id/titleTextView"
                        android:textColor="@color/grey"
                        android:textSize="16sp"
                        android:layout_marginTop="4dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/name"
                        android:textSize="16sp"
                        android:textColor="@color/grey"
                        android:layout_marginTop="25dp"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/firstNameLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:boxStrokeColor="@color/wellness_blue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        app:endIconMode="clear_text"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/firstNameText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@={viewModel.name}"
                            android:textColor="@color/grey"
                            android:inputType="text"
                            android:textStyle="normal" />

                    </com.google.android.material.textfield.TextInputLayout>



                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/email_address"
                        android:textSize="16sp"
                        android:textColor="@color/grey"
                        android:layout_marginTop="22dp"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:boxStrokeColor="@color/wellness_blue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        app:endIconMode="clear_text"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/grey"
                            android:inputType="text"
                            android:textStyle="normal"
                            android:text="@={viewModel.email}"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:textColor="@color/grey"
                        android:layout_marginTop="22dp"
                        android:textSize="16sp"
                        android:text="@string/password"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:boxStrokeColor="@color/wellness_blue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:id="@+id/passowrdLayout"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/grey">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.password}"
                            android:inputType="textPassword"                            android:textStyle="normal" />

                    </com.google.android.material.textfield.TextInputLayout>



                    <Button
                        android:layout_width="match_parent"
                        android:padding="@dimen/button_padding"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:text="@string/sign_up"
                        android:layout_marginTop="35dp"
                        android:backgroundTint="@color/wellness_blue"
                        android:id="@+id/signUpButton"
                        android:layout_height="wrap_content"/>



                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/acc"
                            android:text="Already have an account?"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/acc"
                            android:layout_marginStart="4dp"
                            android:id="@+id/signinTextView"
                            android:background="@drawable/underline_text"
                            android:text="Sign In"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>






                </LinearLayout>




            </LinearLayout>



        </RelativeLayout>


    </ScrollView>


</layout>