<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
>

    <data>
        <variable
            name="viewModel"
            type="com.example.fintech.ui.activity.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/bottomTab"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_height="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/white"
                app:layout_constraintBottom_toTopOf="@id/bottomTab"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="50dp"
                    android:id="@+id/profileImage"
                    android:textColor="@color/white"
                    android:padding="1dp"
                    android:layout_marginTop="40dp"
                    android:textSize="16sp"
                    tools:text="MO"
                    android:textStyle="bold"
                    android:background="@drawable/profile_image_circle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_height="50dp"/>

                <LinearLayout
                    android:layout_marginStart="20dp"
                    android:id="@+id/welcomeLayout"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toEndOf="@+id/profileImage"
                    app:layout_constraintTop_toTopOf="@+id/profileImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/welcome2"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/firstName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@{viewModel.userName}"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/howAreYouFeelingTexView"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/how_are_you_feeling_today"
                    app:layout_constraintTop_toBottomOf="@+id/welcomeLayout"
                    app:layout_constraintStart_toStartOf="@+id/welcomeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:id="@+id/coveredLayout"
                    android:background="@drawable/you_covered_card"
                    android:elevation="2dp"
                    app:layout_constraintTop_toBottomOf="@+id/profileImage"
                    android:layout_height="150dp">

                    <TextView
                        android:id="@+id/topTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total Savings"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/balanceTextView" />

                    <TextView
                        android:id="@+id/balanceTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.format(@string/balance_format, viewModel.balance)}"
                        android:textSize="38sp"
                        android:fontFamily="@font/mulish_regular"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_marginBottom="60dp"
                    android:weightSum="2"
                    app:layout_constraintTop_toBottomOf="@id/coveredLayout"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/buttonLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/add_money_card"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:id="@+id/addmoneyButton"
                        android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:textColor="@color/signup"
                        android:background="@drawable/withdraw_card"
                        android:id="@+id/withdrawButton"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/homepage_card"
                    android:elevation="2dp"
                    android:layout_marginTop="28dp"
                    android:id="@+id/investLayout"
                    app:layout_constraintTop_toBottomOf="@+id/buttonLayout"
                    android:layout_height="75dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/hospitalIcon"
                        android:src="@drawable/save_icon"
                        android:layout_marginTop="17dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="17dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:id="@+id/saveNext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/vector_one"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/hospitalsTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="11dp"
                        android:layout_marginEnd="30dp"
                        android:gravity="center_vertical"
                        android:text="@string/save_for_emergency"
                        android:textColor="@color/wellness_black"
                        android:textSize="19sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/saveNext"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/hospitalIcon"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/saveLayout"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/homepage_card"
                    android:elevation="2dp"
                    app:layout_constraintTop_toBottomOf="@+id/investLayout">

                    <ImageView
                        android:id="@+id/saveIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="17dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/invest_icon"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/investTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="11dp"
                        android:layout_marginEnd="30dp"
                        android:gravity="center_vertical"
                        android:text="@string/see_history"
                        android:textColor="@color/wellness_black"
                        android:textSize="19sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/investNext"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/saveIcon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/investNext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/vector_one"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/saveLayout">

                    <TextView
                        android:layout_width="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/saveLayout"
                        android:id="@+id/selfServiceTextView"
                        android:textColor="@color/wellness_black"
                        android:textSize="18sp"
                        android:layout_marginTop="18dp"
                        android:layout_marginBottom="16dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/self_service"
                        android:layout_height="wrap_content"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/selfServiceRecyclerView"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        tools:listitem="@layout/list"
                        app:layout_constraintTop_toBottomOf="@+id/selfServiceTextView"
                        app:layout_constraintStart_toStartOf="@+id/selfServiceTextView"
                        android:layout_width="match_parent"
                        tools:itemCount="3"
                        android:layout_height="250dp">
                    </androidx.recyclerview.widget.RecyclerView>


                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/bottomTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_card"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tabIconTint="@color/wellness_blue"
            app:tabIndicatorColor="@color/wellness_blue"
            app:tabTextColor="@color/wellness_blue">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/homeTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/nav_home"
                android:text="@string/home" />



            <com.google.android.material.tabs.TabItem
                android:id="@+id/historyTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/transfer_tab"
                android:text="@string/transfer" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/profileTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/account_icon"
                android:text="@string/profile" />

        </com.google.android.material.tabs.TabLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
